--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Home
 ---
+<body class="theme-base-08">
+  ...
+</body>
 
 <div class="posts">
   {% for post in paginator.posts %}
